--- a/frontend/src/styles/Home.css
+++ b/frontend/src/styles/Home.css
@@ -171,11 +171,14 @@ form input[type="submit"]:hover {
 
   .left-navbar {
     border-right: 1px solid black;
+    background-color: #eae7e7;
+    height: 100vh;
   }
   
   .top {
-    border-bottom: 1px solid black;
+    border-bottom: 1px solid lightgray;
     height: 10vh;
+    background-color: #eae7e7;
   }
   
   .left-nav-button {
@@ -193,9 +196,9 @@ form input[type="submit"]:hover {
   .home-card {
     border: solid rgb(183, 173, 173) 1px;
     border-radius: 30px;
-    min-height: 200px;
+    min-height: 8vh;
     text-align: center;
-    width: 30vw;
+    width: 15vw;
     padding: 10px;
     font-weight: bold;
     box-shadow: 0 2px 10px rgba(0, 0, 0, 0.3);
@@ -208,5 +211,9 @@ form input[type="submit"]:hover {
   }
 
   .img-logo {
-    border-right: 1px solid #333;
+    border-right: 1px solid #333; 
   }
+  
+.card-title{
+  font-size: 15px !important;
+}
